# content-aware-image-resizing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: energy.hpp  seam_carver.hpp
src/: energy.cpp  main.cpp  seam_carver.cpp
